--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <parquet.version>1.12.0</parquet.version>
         <hadoop-client.version>3.3.1</hadoop-client.version>
     </properties>
@@ -98,6 +100,7 @@
                 <configuration>
                     <source>8</source>
                     <target>8</target>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
         </plugins>
