--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.hwywl</groupId>
     <artifactId>parquet-plus</artifactId>
-    <version>1.0.-RELEASE</version>
+    <version>1.0.3-RELEASE</version>
 
     <name>parquet-plus</name>
     <description>一个增强parquet文件方便读写的工具类</description>
@@ -23,7 +23,7 @@
         <connection>scm:git:https://github.com/HWYWL/util-plus.git</connection>
         <developerConnection>scm:git:https://github.com/HWYWL/util-plus.git</developerConnection>
         <url>https://github.com/HWYWL/parquet-plus</url>
-        <tag>parquet-plus-1.0.</tag>
+        <tag>parquet-plus-1.0.3</tag>
     </scm>
 
     <developers>
